# StarFox

./: .gitignore  CMakeLists.txt  README.md
source/: StarFox.sln  base.props
source/fbxsdk/: README.txt  fbxsdk-targets.cmake  fbxsdk.props
source/gsgamelib/: CMakeLists.txt  gsgamelib.props  gsgamelib.vcxproj  gsgamelib.vcxproj.filters
source/gsgamelib/src/gs/Base/: Base.h  Singleton.h  string_helpers.cpp  string_helpers.h
source/gsgamelib/src/gs/Image/: ImageData.cpp  ImageData.h  ImageFuncs.cpp  ImageFuncs.h
source/gsgamelib/src/gs/Input/: KeyboardMgr.cpp  KeyboardMgr.h
source/gsgamelib/src/gs/Math/: Angle.h  EulerAngles.cpp  EulerAngles.h  MathEx.cpp  MathEx.h  MathUtil.h  Matrix43.cpp  Matrix43.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
source/gsgamelib/src/gs/Platform/GL/: GLHeaders.h  GLUtil.cpp  GLUtil.h
source/gsgamelib/src/gs/Platform/Win32/: BasicWin32Window.cpp  BasicWin32Window.h  MFCWindow.cpp  MFCWindow.h  Win32GLGraphicsEngine.cpp  Win32GLGraphicsEngine.h  Win32Headers.h  Win32MonitorInfo.h  Win32System.cpp  Win32System.h  Win32Window.h
source/gsgamelib/src/gs/Rendering/: Color4.h  GraphicsEngine.cpp  GraphicsEngine.h  Renderer.h
source/gsgamelib/src/gs/Scene/: SceneGraph.h  SceneNode.cpp  SceneNode.h  SceneNodeComponent.cpp  SceneNodeComponent.h
source/gsgamelib/src/gs/System/: FrameTimer.cpp  FrameTimer.h  IO.h  System.h
source/gsgamelib/unit_tests/: UnitTest_Math.cpp
source/starfoxgame/: CMakeLists.txt  starfoxgame.vcxproj  starfoxgame.vcxproj.filters
source/starfoxgame/cmake/: FindFBX.cmake
source/starfoxgame/data/: Arwing_001.fbx  Building1.fbx  Building1.tga
source/starfoxgame/src/: AnchorComponent.cpp  AnchorComponent.h  CameraComponent.cpp  CameraComponent.h  DebugDraw.cpp  DebugDraw.h  FbxLoader.cpp  FbxLoader.h  GameInput.h  GroundComponent.cpp  GroundComponent.h  PlayerControlComponent.cpp  PlayerControlComponent.h  StaticMesh.h  StaticMeshComponent.cpp  StaticMeshComponent.h  main.cpp
